[package]
name = "bt_time_utils"
version = "0.1.1"
edition = "2021"
authors = ["calvarez <calvarez@bachuetech.biz>"]
description = "Basic time formatting utility"
keywords = ["time","formatting"]
categories = ["value-formatting", "development-tools"]
repository = "https://github.com/bachuetech/bt_time_utils"
readme = "README.md"
homepage = "https://github.com/bachuetech/bt_time_utils/"
license = "GPL-3.0-only"

[dependencies]
chrono = "0.4.41"
