[package]
name = "bt_time_utils"
version = "0.1.2"
edition = "2024"
authors = ["calvarez <calvarez@bachuetech.biz>"]
description = "Basic time formatting utility"
keywords = ["time","formatting"]
categories = ["value-formatting", "development-tools"]
repository = "https://github.com/bachuetech/bt_time_utils"
readme = "README.md"
homepage = "https://github.com/bachuetech/bt_time_utils/"
license = "GPL-3.0-only"

[dependencies]
bt_logger = "0.3.3"
chrono = "0.4.44"
chrono-tz = "0.10.4"
time = {version = "0.3.47", features = ["macros", "formatting", "parsing"] }
time-tz = "2.0.0"

[dev-dependencies]

